# mes

./: .gitignore  docker-compose.yml  start-dev.sh  start.ps1  start.sh  缺失模块分析报告.md
mes-backend/: .dockerignore  Cargo.toml  Dockerfile  env.example  test_hash.rs
mes-backend/migrations/: 0001_create_equipment_tables.sql  0002_create_production_schedules.sql  0003_create_quality_tables.sql  0004_create_master_extension.sql  0005_create_warehouse_extension.sql  0006_create_production_extension.sql  0007_create_user_audit_tables.sql  0008_create_equipment_extension.sql
mes-backend/src/: main.rs
mes-backend/src/api/: auth.rs  equipment.rs  master.rs  mod.rs  production.rs  quality.rs  schedule.rs  system.rs  warehouse.rs
mes-backend/src/cache/: mod.rs
mes-backend/src/config/: mod.rs
mes-backend/src/db/: mod.rs
mes-backend/src/db/dao/: batch_traceability_dao.rs  bom_dao.rs  customer_complaint_dao.rs  customers_dao.rs  equipment_calibration_record_dao.rs  equipment_dao.rs  equipment_fault_report_dao.rs  equipment_inspection_dao.rs  equipment_kpi_dao.rs  equipment_maintenance_plan_dao.rs  equipment_maintenance_task_dao.rs  equipment_mqtt_config_dao.rs  equipment_repair_order_dao.rs  equipment_status_log_dao.rs  inbound_order_dao.rs  inventory_dao.rs  location_dao.rs  login_log_dao.rs  material_category_dao.rs  material_requirement_dao.rs  materials_dao.rs  measuring_equipment_dao.rs  mod.rs  nonconforming_product_dao.rs  operation_log_dao.rs  outbound_order_dao.rs  permission_dao.rs  picking_order_dao.rs  process_route_dao.rs  production_order_dao.rs  production_plan_dao.rs  production_receipt_dao.rs  production_report_dao.rs  production_schedule_dao.rs  quality_cost_dao.rs  quality_inspection_item_dao.rs  quality_inspection_report_dao.rs  quality_inspection_task_dao.rs  quality_kpi_dao.rs  quality_traceability_record_dao.rs  (+17 more)
mes-backend/src/db/entity/: batch_traceability.rs  boms.rs  customer_complaints.rs  customers.rs  departments.rs  equipment.rs  equipment_calibration_records.rs  equipment_fault_reports.rs  equipment_inspections.rs  equipment_kpi.rs  equipment_maintenance_plans.rs  equipment_maintenance_tasks.rs  equipment_mqtt_config.rs  equipment_repair_orders.rs  equipment_status_log.rs  inbound_order_details.rs  inbound_orders.rs  inventory.rs  locations.rs  login_logs.rs  material_categories.rs  material_requirements.rs  materials.rs  measuring_equipment.rs  mod.rs  nonconforming_products.rs  operation_logs.rs  outbound_order_lines.rs  outbound_orders.rs  permissions.rs  picking_order_lines.rs  picking_orders.rs  process_routes.rs  production_orders.rs  production_plans.rs  production_receipts.rs  production_reports.rs  production_schedules.rs  quality_costs.rs  quality_inspection_items.rs  (+24 more)
mes-backend/src/middleware/: mod.rs
mes-backend/src/model/: equipment.rs  master_data.rs  mod.rs  production.rs  quality.rs  schedule.rs  system.rs  warehouse.rs
mes-backend/src/mqtt/: client.rs  handler.rs  manager.rs  mod.rs
mes-backend/src/service/: equipment_service.rs  mod.rs  mqtt_service.rs
mes-backend/src/utils/: decimal.rs  jwt.rs  mod.rs
mes-frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.mts
sql/: equipment_management.sql  (+5 more)
(+79 files in other folders)
