[package]
name = "mes-backend"
version = "0.1.0"
edition = "2021"

[features]
allocator_api = []

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
config = "0.14"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
async-trait = "0.1"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
tokio-postgres = "0.7"
bcrypt = "0.15"

# Database & ORM
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "chrono", "with-json"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "migrate"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# MQTT
rumqttc = { version = "0.24", features = ["url"] }

# OpenAPI / Swagger
# utoipa = { version = "4", features = ["axum_extras", "chrono"] }
# utoipa-swagger-ui = { version = "7", features = ["axum"] }
num-traits = "0.2.19"
hyper = "1.8.1"
rust_decimal = "1.39.0"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "test-util"] }


